# Future-Fridges

./: CMakeLists.txt  CMakeLists.txt.user.1b4aac0  CMakeLists.txt.user.875fd6c  CMakeLists.txt.user.adb559a  additem.cpp  additemdialog.cpp  additemdialog.h  additemdialog.ui  adminactions.cpp  adminactions.h  adminactions.ui  chefswindow.cpp  chefswindow.h  chefswindow.ui  database.h  ddwindow.cpp  ddwindow.h  ddwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  otpwindow.cpp  otpwindow.h  otpwindow.ui  signupdialog.cpp  signupdialog.h  signupdialog.ui  usermanagementdialog.cpp  usermanagementdialog.h  usermanagementdialog.ui
